no overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body,
 #root,
 .App {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     margin: 0;
     padding: 0;
     font-family: "Work Sans", BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -29,7 +29,7 @@ body,
 
 .splitPageMiddle {
     padding: 1.5rem 1.2rem;
-    max-width: 100vw;
+    width: 100%;
     grid-area: splitMiddle;
 }
 
@@ -76,6 +76,7 @@ code {
     background-color: #111122e0;
     margin: 1rem -1.2rem 1.5rem -1.2rem;
     padding: 1.5rem 1.2rem;
+    width: 100vw;
     overflow: auto;
 }
 
@@ -222,6 +223,7 @@ input:checked ~ .sideNavContent {
     .codeBlock {
         padding: 1.5rem 2.5rem;
         margin: 1rem -2.5rem 1.5rem -2.5rem;
+        width: unset;
     }
 
     .sideNav label {
